Add pagination for transactions
